@@ -480,7 +480,7 @@
   <customwidget>
    <class>HistoryComboBox</class>
    <extends>QComboBox</extends>
-   <header>historycombobox.h</header>
+   <header>widgets/historycombobox.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
